# minesweeper

./: .gitignore  CMakeLists.txt  README.md  minesweeper_engine_config.h.in
asserts/: bomb.aseprite  empty-cell.aseprite  grid-cell-0.aseprite  mark.aseprite
examples/: CMakeLists.txt  minesweeper_game.cpp
include/: CMakeLists.txt  minesweeper_engine.h
include/engine/cell/: cell.h
include/engine/grid/: grid.h
include/engine/mine/: mine.h
src/: CMakeLists.txt
src/engine/: CMakeLists.txt
src/engine/cell/: cell.cpp
src/engine/grid/: grid.cpp
src/engine/mine/: mine.cpp
test/: CMakeLists.txt  test_cell.cpp  test_grid.cpp  test_mine.cpp
